--- a/serverless/bin/replicaset.yaml.tmpl
+++ b/serverless/bin/replicaset.yaml.tmpl
@@ -33,4 +33,4 @@ spec:
          - name: EXTRA
            value: "-rf 1"
          - name: JVM_EXTRA
-           value: "-Xms64m -Xmx1024m"
+           value: "-Xms64m -Xmx4g"
