better install/test instructions

--- a/core/src/test/resources/config.properties.tmpl
+++ b/core/src/test/resources/config.properties.tmpl
@@ -2,11 +2,11 @@ context=dso
 image=0track/dso-server:latest
 app=serverless-smile
 version=0.1-SNAPSHOT
-aws.region=us-east-1
-aws.iam.role=arn:aws:iam::667743079194:role/slambda_lambda_function
+aws.region=REGION
+aws.iam.role=arn:aws:iam::ACCOUNT:role/ROLE
 aws.lambda.function.name=serverless-smile
 aws.lambda.function.handler=smile.util.StatefulHandler
-aws.lambda.function.arn=arn:aws:lambda:us-east-1:667743079194:function:serverless-smile
-dso.server=35.245.7.205:11222
+aws.lambda.function.arn=arn:aws:lambda:REGION:ACCOUNT:function:serverless-smile
+dso.server=IP:PORT
 smile.threads=1000
 logging=true
